files/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: counter-frontend
    sandbox: counter-frontend
    learn-kubernetes: counter-frontend
  name: counter-frontend
spec:
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: counter-frontend
  sessionAffinity: None
  type: ClusterIP
