files/frontend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: counter-frontend
    sandbox: counter-frontend
    learn-kubernetes: counter-frontend
  name: counter-frontend
spec:
  port:
    targetPort: 3000-tcp
  to:
    kind: Service
    name: counter-frontend
